--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "expert-technical-services",
   "version": "0.1.0",
   "private": true,
+  "author": "manoj",
   "dependencies": {
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
@@ -14,6 +15,9 @@
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
     "sweetalert2": "^11.15.8"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
